<resources>
    <string name="selected_item">Selected item:</string>
    <string-array name="jenis_kelamin">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="app_name">UINAM Find</string>
    <string name="title_search_home">Telusuri UIN Alauddin Makassar</string>
    <string name="subtitle_search_home">Penelusuran akan menghasilkan informasi seperti kegiatan, talent, atau peluang sesuai pencarian</string>
    <string name="hint_search_search_home">Cari keahlian atau informasi</string>
    <string name="title_activity_room_chat">RoomChatActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut ullamco</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id</string>
    <string name="title_activity_search_home">SearchHomeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="semua_menu">Semua Menu</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="loker">Loker</string>
    <string name="beasiswa">Beasiswa</string>
    <string name="magang">Magang</string>
    <string name="lembaga">Lembaga</string>
    <string name="ukm">UKM</string>
    <string name="organisasi">Organisasi</string>
    <string name="title_activity_list_pengalaman_mahasiswa">ListPengalamanMahasiswaActivity</string>
</resources>